--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="height_nav_buttons">50dp</dimen>
+    <dimen name="row_window_status_text_size">50sp</dimen>
+    <dimen name="title_size">30sp</dimen>
 </resources>
